# word_search_solver

./: .gitignore  README.md  TODO.txt  input_grid.txt  setup.cfg  setup.py  w_s_solve.py  wordlist.txt
src/word_search_solver/: solver.py
tests/: test_solver.py
tests/expected_output/: output_1.txt  output_2.txt  output_3.txt
tests/word_search_grids/: grid_1.txt  grid_2.txt  grid_3.txt
tests/wordlists/: list_1.txt  list_2.txt  list_3.txt
word_search_solver/: solver.py
