[metadata]
name = word-search-solver
version = 0.0.1
author = Maximilian Tiao
author_email = maximilian.tiao@gmail.com
description = The amazing Word Search Solver
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maximiliantiao/word_search_solver
project_urls =
    Bug Tracker = https://github.com/maximiliantiao/word_search_solver/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src